# cdc_sample

./: .gitignore  CMakeLists.txt  Info.plist  cam_preview_dialog.cpp  cam_preview_dialog.h  cam_preview_widget.cpp  cam_preview_widget.h  cam_preview_widget_apple.mm  gen_vs2022.bat  input_capture.cpp  input_capture.h  input_capture_mac.mm  main.cpp  mainwindow.cpp  mainwindow.h
ios/: Info.plist  build.sh  clean_xcode.sh  embed_and_sign.sh  gen_xcode.sh  package.sh
mac/: clean_xcode.sh  gen_qtcreator.sh  gen_xcode.sh
windows/: clean_vs.bat  gen_vs2022.bat
